CAY-2793 Modeler: support for JDK 17+ for Cayenne 4.0